trying to load controllers dynamically

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Yet another test task",
   "author": "Aleksey Gorb",
   "scripts": {
-    "start": "node -r esm dist/app.js",
+    "start": "node $NODE_DEBUG_OPTION -r esm -r ts-node/register src/app.ts",
     "build-ts": "tsc",
     "watch-ts": "tsc -w"
   },
@@ -24,8 +24,6 @@
     "@types/express": "^4.16.0",
     "@types/glob": "^7.1.1",
     "@types/node": "^10.12.9",
-    "@types/winston": "^2.3.7",
-    "nodemon": "^1.18.6",
     "ts-node": "^7.0.1",
     "tslint": "^5.9.1"
   }
