--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.2.2",
+    "@types/knex": "^0.15.1",
+    "@types/pg": "^7.4.11",
     "dotenv": "6.1.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "glob": "^7.1.3",
+    "knex": "^0.15.2",
+    "pg": "^7.6.1",
     "typescript": "^3.1.6",
     "winston": "3.1.0",
     "winston-daily-rotate-file": "^3.5.1"
